# PortfolioAgents

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
evals/: common.py  portfolio_task.py  position_task.py  scorers.py  tasks.py
evals/cases/: portfolio.json  portfolio.py  position.json  position.py
src/portfolio_agents/: __init__.py  analysts.py  cache.py  config.py  errors.py  factories.py  fakes.py  ibkr.py  main.py  metrics.py  models.py  pipeline.py  progress.py  report.py
tests/: conftest.py  factories.py  test_cache.py  test_config.py  test_ibkr.py  test_main.py  test_metrics.py  test_pipeline.py  test_progress.py  test_report.py
