[project]
name = "portfolio-agents"
version = "0.1.0"
description = "Async portfolio agents built on the OpenAI Agents SDK and Interactive Brokers"
readme = "README.md"
authors = [
    { name = "mdeclerk", email = "Matthias.de.Clerk@gmx.de" }
]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.2",
    "ib-async>=2.1.0",
    "openai-agents>=0.18.2",
    "pandas>=3.0.3",
    "pydantic>=2.10",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
portfolio-agents = "portfolio_agents.main:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
evals = [
    "inspect-ai>=0.3.248",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests", "evals"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
